# aghub

./: .editorconfig  .gitignore  .impeccable.md  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.CN.md  README.md  cliff.toml  justfile  package.json  rustfmt.toml  skills-lock.json
.agents/skills/adapt/: SKILL.md
.agents/skills/animate/: SKILL.md
.agents/skills/arrange/: SKILL.md
.agents/skills/bolder/: SKILL.md
.agents/skills/clarify/: SKILL.md
.agents/skills/colorize/: SKILL.md
.agents/skills/delight/: SKILL.md
.agents/skills/distill/: SKILL.md
.agents/skills/extract/: SKILL.md
.agents/skills/frontend-design/reference/: color-and-contrast.md  interaction-design.md  responsive-design.md  spatial-design.md  typography.md
.agents/skills/harden/: SKILL.md
.agents/skills/heroui-react/: SKILL.md
.agents/skills/heroui-react/scripts/: get_component_docs.mjs  get_docs.mjs  get_source.mjs  get_styles.mjs  get_theme.mjs  list_components.mjs
.agents/skills/normalize/: SKILL.md
.agents/skills/onboard/: SKILL.md
.agents/skills/optimize/: SKILL.md
.agents/skills/overdrive/: SKILL.md
.agents/skills/polish/: SKILL.md
.agents/skills/project-form-patterns/: SKILL.md
.agents/skills/quieter/: SKILL.md
.agents/skills/typeset/: SKILL.md
.claude/skills/init-deep/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/agents/: AGENTS.md  Cargo.toml
crates/agents/src/: descriptor.rs  lib.rs  models.rs  sub_agents.rs
crates/agents/src/agents/: amp.rs  antigravity.rs  augmentcode.rs  claude.rs  cline.rs  copilot.rs  cursor.rs  factory.rs  gemini.rs  jetbrains_ai.rs  kilocode.rs  kimi.rs  kiro.rs  mistral.rs  mod.rs  openclaw.rs  opencode.rs  pi.rs  roocode.rs  trae.rs  warp.rs  windsurf.rs  zed.rs
crates/agents/src/agents/codex/: mcp.rs  mod.rs  sub_agent.rs
crates/agents/src/format/: json_list.rs  json_map.rs  json_opencode.rs  mod.rs  toml_format.rs
crates/api/: AGENTS.md  Cargo.toml
crates/api/src/: editor_detection.rs  error.rs  extractors.rs  lib.rs  main.rs  state.rs
crates/api/src/dto/: agents.rs  common.rs  credential.rs  integrations.rs  market.rs  mcp.rs  mcp_market.rs  mod.rs  skill.rs  sub_agent.rs  transfer.rs
crates/api/src/routes/: agents.rs  catchers.rs  credentials.rs  integrations.rs  market.rs  mcp_market.rs  mcps.rs  mod.rs  skills.rs  sub_agents.rs
crates/cli/: AGENTS.md  Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: add.rs  delete.rs  disable.rs  enable.rs  get.rs  mod.rs  update.rs
crates/cli/tests/: cli_tests.rs
crates/core/: AGENTS.md  Cargo.toml
crates/core/src/: adapter.rs  all_agents.rs  availability.rs  errors.rs  lib.rs  models.rs  paths.rs  process.rs  testing.rs  transfer.rs
crates/core/src/adapters/: mod.rs
crates/core/src/manager/: mcp.rs  mod.rs  skill.rs  sub_agent.rs
crates/core/src/registry/: mod.rs
crates/core/src/skills/: discovery.rs  mod.rs
crates/core/tests/: integration_tests.rs  mcp_tests.rs  test_agent_paths.rs
crates/desktop/: .prettierignore  AGENTS.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
crates/desktop/src/: App.tsx  index.css  main.tsx
crates/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/desktop/src-tauri/capabilities/: default.json
crates/desktop/src-tauri/icons/: icon.icns
crates/desktop/src-tauri/icons/dmg/: background.tiff
crates/desktop/src-tauri/src/: lib.rs  main.rs
crates/desktop/src-tauri/src/commands/: mod.rs  server.rs  workspace.rs
crates/desktop/src/components/: agent-card.tsx  agent-list.tsx  agent-selector.tsx  app-sidebar.tsx  bulk-delete-dialog.tsx  create-mcp-panel.tsx  create-skill-panel.tsx  create-sub-agent-panel.tsx  deep-link-import-modal.tsx  edit-mcp-panel.tsx  edit-project-dialog.tsx  env-editor.tsx  http-header-editor.tsx  import-github-skill-panel.tsx  import-mcp-panel.tsx  import-skill-panel.tsx  install-target-selector.tsx  key-pair-editor.tsx  list-search-header.tsx  manage-agents-dialog.tsx  manage-skill-agents-dialog.tsx  manage-sub-agent-agents-dialog.tsx  mcp-detail.tsx  mcp-list.tsx  multi-select-floating-bar.tsx  onboarding-controller.tsx  project-list.tsx  project-selector.tsx  project-sub-agents.tsx  project-workspace-panel.tsx  redirect.tsx  resource-section-header.tsx  result-status-item.tsx  skill-detail-dialogs.tsx  skill-detail-helpers.ts  skill-detail-views.tsx  skill-detail.tsx  skill-info-card.tsx  skill-list.tsx  skills-agent-list.tsx  (+5 more)
crates/desktop/src/contexts/: agent-availability.tsx  server.tsx  theme.tsx
crates/desktop/src/hooks/: use-agent-availability.ts  use-api.ts  use-favorites.ts  use-install-target.ts  use-integrations.ts  use-projects.ts  use-server.ts  use-sidebar-navigation.ts  use-theme.ts
crates/desktop/src/layouts/: main-layout.tsx
crates/desktop/src/lib/: agent-capabilities.ts  agent-icons.tsx  api.ts  deep-link.ts  form-utils.ts  i18n.ts  install-utils.ts  key-pair-utils.ts  mcp-search-text.ts  mcp-utils.ts  menu.ts  onboarding.ts  secrets.ts  sidebar-navigation.ts  skills-path-group.ts  store.ts  utils.ts
crates/git/: AGENTS.md  Cargo.toml
crates/git/src/: clone.rs  credentials.rs  error.rs  lib.rs  remote.rs
crates/markdown/: Cargo.toml
crates/markdown/src/: lib.rs
crates/skill/: AGENTS.md  Cargo.toml  README.md
crates/skill/examples/: parse_skill.rs  unpack_skill.rs
crates/skill/src/: error.rs  lib.rs  model.rs  package.rs  parser.rs  sanitize.rs  scan.rs  validator.rs
crates/skill/src/lock/: global.rs  io.rs  local.rs  mod.rs  test_utils.rs  types.rs
crates/skill/tests/: fixture_validation.rs
crates/skill/tests/fixtures/global-lock-with-timestamps/: expected.json  metadata.json
crates/skill/tests/fixtures/local-lock-simple/: expected.json  metadata.json
crates/skill/tests/fixtures/local-lock-sorted/: expected.json  metadata.json
crates/skills-sh/: AGENTS.md  Cargo.toml
crates/skills-sh/src/: client.rs  lib.rs  summary.rs  types.rs
crates/skills-sh/tests/: integration_tests.rs
fixtures/: .gitignore
scripts/: bump.js
(+62 files in other folders)
