[workspace]
members = [
	"crates/agents",
	"crates/core",
	"crates/cli",
	"crates/api",
	"crates/skills-sh",
	"crates/skill",
	"crates/git",
	"crates/markdown",
	"crates/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = [ "Eric Qu <akarachen>" ]
license = "MIT"
repository = "https://github.com/akarachen/aghub"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "preserve_order" ] }
thiserror = "1.0"
dirs = "5.0"
ts-rs = "12.0.1"

# CLI dependencies
clap = { version = "4.5", features = [ "derive" ] }
tabled = "0.15"
anyhow = "1.0"
colored = "2.1"

# HTTP dependencies
reqwest = { version = "0.12", features = [ "json" ] }
url = "2.5"

# Testing dependencies
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

# YAML parsing
serde_yaml = "0.9"

# TOML parsing
toml = "0.8"

# Interactive CLI
inquire = "0.7"

# Git hooks
cargo-husky = { version = "1", default-features = false, features = [
	"precommit-hooks",
	"run-cargo-test",
] }
