[package]
name = "aghub-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
which = "7"
aghub-markdown = { path = "../markdown" }

[dev-dependencies]
tempfile = { workspace = true }
