[package]
name = "aghub-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REST API server for aghub"
default-run = "aghub-api"

[[bin]]
name = "aghub-api"
path = "src/main.rs"

[lib]
name = "aghub_api"
path = "src/lib.rs"
crate-type = [ "rlib" ]

[dependencies]
aghub-core = { path = "../core" }
skill = { path = "../skill" }
skills-sh = { path = "../skills-sh" }
rocket = { version = "0.5", features = [ "json" ] }
rocket_cors = "0.6.0"
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "process" ] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
ts-rs = { workspace = true }
which = "7"
open = "5"
tempfile = "3"
uuid = { version = "1", features = [ "v4" ] }
log = "0.4.29"
reqwest = { workspace = true }
