[package]
name = "aghub-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aghub-agents = { path = "../agents" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true, optional = true }
skill = { path = "../skill" }
which = "7"
log = "0.4.29"

[dev-dependencies]
aghub-agents = { path = "../agents" }
tempfile = { workspace = true }

[features]
default = [ "testing" ]
agent-validation = [  ]
testing = [ "tempfile" ]
