[package]
name = "aghub-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Git clone with credential injection from environment variables"

[dependencies]
gix = { version = "0.70", default-features = false, features = [
	"blocking-network-client",
	"worktree-mutation",
	"blocking-http-transport-reqwest-native-tls",
] }
tempfile = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
