[package]
name = "skill"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Skill packaging and parsing library for .skill/.zip files"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
zip = "2.2"
tempfile = { workspace = true }
skills-ref = { git = "https://github.com/AkaraChen/skills-ref" }
walkdir = "2.5"
chrono = { version = "0.4", features = [ "serde" ] }
dirs = { workspace = true }
ignore = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
