[package]
name = "skills-sh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "API client for skills.sh"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = [ "rt-multi-thread", "macros" ] }
tokio-test = "0.4"
